# bechamel

./: .git-blame-ignore-revs  .ocamlformat  .travis.yml  CHANGES.md  LICENSE.md  README.md  bechamel-js.opam  bechamel-notty.opam  bechamel-perf.opam  bechamel.opam  dune-project  index.html  mperf.opam  odoc.css
.github/workflows/: build.yml  wintest.yml
bechamel/: index.html
bechamel-js/: index.html
bechamel-js/Bechamel_js/: index.html
bechamel-js/Bechamel_js__/: index.html
bechamel-js/Bechamel_js__Dataset/: index.html
bechamel-js/Bechamel_js__Desc/: index.html
bechamel-js/Bechamel_js__KDE/: index.html
bechamel-js/Bechamel_js__OLS/: index.html
bechamel-js/Bechamel_js__Point/: index.html
bechamel-notty/: index.html
bechamel-notty/Bechamel_notty/: index.html
bechamel-notty/Bechamel_notty/Multiple/: index.html
bechamel-notty/Bechamel_notty/One/: index.html
bechamel-notty/Bechamel_notty/Order/: index.html
bechamel-notty/Bechamel_notty/Unit/: index.html
bechamel-perf/: index.html
bechamel-perf/Bechamel_perf/: index.html
bechamel-perf/Bechamel_perf/Alignment_faults/: index.html
bechamel-perf/Bechamel_perf/Branch_instructions/: index.html
bechamel-perf/Bechamel_perf/Branch_misses/: index.html
bechamel-perf/Bechamel_perf/Bus_cycles/: index.html
bechamel-perf/Bechamel_perf/Cache_misses/: index.html
bechamel-perf/Bechamel_perf/Cache_references/: index.html
bechamel-perf/Bechamel_perf/Context_switches/: index.html
bechamel-perf/Bechamel_perf/Cpu_clock/: index.html
bechamel-perf/Bechamel_perf/Cpu_migrations/: index.html
bechamel-perf/Bechamel_perf/Cycles/: index.html
bechamel-perf/Bechamel_perf/Dummy/: index.html
bechamel-perf/Bechamel_perf/Emulation_faults/: index.html
bechamel-perf/Bechamel_perf/Extension/: index.html
bechamel-perf/Bechamel_perf/Instance/: index.html
bechamel-perf/Bechamel_perf/Instructions/: index.html
bechamel-perf/Bechamel_perf/Make/: index.html
bechamel-perf/Bechamel_perf/Make/argument-1-X/: index.html
bechamel-perf/Bechamel_perf/Page_faults/: index.html
bechamel-perf/Bechamel_perf/Page_faults_maj/: index.html
bechamel-perf/Bechamel_perf/Page_faults_min/: index.html
bechamel-perf/Bechamel_perf/Ref_cpu_cycles/: index.html
bechamel-perf/Bechamel_perf/Stalled_cycles_backend/: index.html
bechamel-perf/Bechamel_perf/Stalled_cycles_frontend/: index.html
bechamel-perf/Bechamel_perf/Task_clock/: index.html
bechamel/Bechamel/: index.html
bechamel/Bechamel/Analyze/: index.html
bechamel/Bechamel/Analyze/OLS/: index.html
bechamel/Bechamel/Analyze/RANSAC/: index.html
bechamel/Bechamel/Benchmark/: index.html
bechamel/Bechamel/Linear_algebra/: index.html
bechamel/Bechamel/Measure/: index.html
bechamel/Bechamel/Measurement_raw/: index.html
bechamel/Bechamel/S/: index.html
bechamel/Bechamel/S/module-type-FUNCTOR/: index.html
bechamel/Bechamel/S/module-type-MEASURE/: index.html
bechamel/Bechamel/Staged/: index.html
bechamel/Bechamel/Test/: index.html
bechamel/Bechamel/Test/Elt/: index.html
bechamel/Bechamel/Test/Multiple/: index.html
bechamel/Bechamel/Test/Uniq/: index.html
bechamel/Bechamel/Time/: index.html
bechamel/Bechamel/Toolkit/: index.html
bechamel/Bechamel/Toolkit/Compaction/: index.html
bechamel/Bechamel/Toolkit/Extension/: index.html
bechamel/Bechamel/Toolkit/Instance/: index.html
bechamel/Bechamel/Toolkit/Major_allocated/: index.html
bechamel/Bechamel/Toolkit/Major_collection/: index.html
bechamel/Bechamel/Toolkit/Minor_allocated/: index.html
bechamel/Bechamel/Toolkit/Minor_collection/: index.html
bechamel/Bechamel/Toolkit/Monotonic_clock/: index.html
bechamel/Bechamel/Toolkit/One/: index.html
bechamel/Bechamel/Toolkit/Promoted/: index.html
bechamel/Bechamel__/: index.html
bechamel/Bechamel__Analyze/: index.html
bechamel/Bechamel__Benchmark/: index.html
bechamel/Bechamel__Ext/: index.html
bechamel/Bechamel__Linear_algebra/: index.html
bechamel/Bechamel__Measure/: index.html
bechamel/Bechamel__Measurement_raw/: index.html
bechamel/Bechamel__Ransac/: index.html
bechamel/Bechamel__S/: index.html
bechamel/Bechamel__Staged/: index.html
bechamel/Bechamel__Test/: index.html
bechamel/Bechamel__Time/: index.html
bechamel/Bechamel__Toolkit/: index.html
bechamel/Monotonic_clock/: index.html
examples/: .sqrt.ml.swp  dune  fact.html  fact.ml  list.ml  sqrt.ml
html/: index.html  outputs.json  style.css  without_data.js
lib/: analyze.ml  analyze.mli  bechamel.ml  bechamel.mli  benchmark.ml  benchmark.mli  cheap_option.ml  cheap_option.mli  dune  ext.ml  ext.mli  extension.ml  extension.mli  label.ml  label.mli  linear_algebra.ml  measure.ml  measure.mli  measurement_raw.ml  measurement_raw.mli  obj_array.ml  obj_array.mli  option_array.ml  option_array.mli  polytable.ml  polytable.mli  ransac.ml  s.ml  s.mli  staged.ml  staged.mli  test.ml  test.mli  time.ml  time.mli  toolkit.ml  toolkit.mli  uniform_array.ml  uniform_array.mli  unsafe.ml
lib/js/: bechamel_js.ml  color.ml  dataset.ml  desc.ml  dune  kDE.ml  oLS.ml  ols.ml  point.ml
lib/monotonic_clock/: clock_linux.ml  clock_mach.ml  clock_mach_stubs.c  clock_windows.ml  clock_windows_stubs.c  dune
lib/monotonic_clock/select/: select.ml
lib/mtime/: clock_linux.ml  clock_linux_stubs.c  clock_mach.ml  clock_windows.ml  dune
lib/mtime/select/: select.ml
lib/notty/: bechamel_notty.ml  dune
lib/perf/: .ocamlformat  bechamel_perf.ml  bechamel_perf.mli  dune  toolkit.ml
mperf/: index.html
mperf/Mperf/: index.html
mperf/Mperf/Attr/: index.html
mperf/Mperf/Attr/Kind/: index.html
mperf/lib/: dune  mperf.ml  mperf.mli  mperf_stubs.c
src/: clock.ml  dune  main.ml
test/allocate/: dune  test.ml
test/bechamel-html/: dune  output.html.expected
