opam-version: "2.0"
name:         "bechamel-js"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/mirage/bechamel"
bug-reports:  "https://github.com/mirage/bechamel/issues"
dev-repo:     "git+https://github.com/mirage/bechamel.git"
doc:          "https://mirage.github.io/bechamel/"
license:      "MIT"
synopsis:     "HTML generator for bechamel's output"
description: """A simple tool to generate a standalone HTML
page which shows results from bechamel's benchmarks."""

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "ocaml"      {>= "4.08.0"}
  "dune"       {>= "2.0.0"}
  "result"     {>= "1.5"}
  "bechamel"   {= version}
  "rresult"
  "json-data-encoding"
  "jsonm"
  "fmt"        {>= "0.9.0"}
]
