opam-version: "2.0"
name:         "decompress"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/bechamel"
bug-reports:  "https://github.com/dinosaure/bechamel/issues"
dev-repo:     "git+https://github.com/dinosaure/bechamel.git"
doc:          "https://dinosaure.github.io/bechamel/"
license:      "MIT"
synopsis:     "Yet Another Benchmark in OCaml"

build: [
  [ "dune" "subst" ]
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "ocaml"      {>= "4.06.0"}
  "dune"       {build}
  "fmt"
  "rresult"
  "mtime"
  "logs"
  "base-bytes"
  "base-bigarray"
  "ocplib-json-typed"
  "jsonm"
]
