opam-version: "2.0"
name:         "bechamel"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/mirage/bechamel"
bug-reports:  "https://github.com/mirage/bechamel/issues"
dev-repo:     "git+https://github.com/mirage/bechamel.git"
doc:          "https://mirage.github.io/bechamel/"
license:      "MIT"
synopsis:     "Yet Another Benchmark in OCaml"
description: """BEnchmark for a CHAMEL/camel/caml which
is agnostic to the system. It's a micro-benchmark tool
which lets the user to re-analyzes and prints samples."""

build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] {with-test}
]

depends: [
  "ocaml"      {>= "4.08.0"}
  "dune"       {>= "2.0.0"}
  "fmt"        {>= "0.9.0"}
  "base-bytes"
  "stdlib-shims"
]
